--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,7 +76,7 @@ jobs:
           # *-* Munch *-*
           - name: "KernelSU-Next with SuSFS + BPF (munch)"
             KERNEL_DEVICE_CONFIG: "munch"
-            KERNEL_TREE_BRANCH: "base-bpf-spoof"
+            KERNEL_TREE_BRANCH: "tes"
             KERNELSU_NAME: "KSUN"
             KERNELSU_SETUP_URL: "https://raw.githubusercontent.com/Impqxr/KernelSU-Next/refs/heads/legacy-susfs/kernel/setup.sh"
             KERNELSU_SETUP_BRANCH: "legacy-susfs"
